# aleo-prover

./: Cargo.toml
src/: client_direct.rs  main.rs  prover.rs
